// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOILinkAction renders with a doi id 1`] = `
<UserActionWrapper>
  <DOILink
    doi="10.1007/s11182-019-01606-1"
  >
    <IconText
      icon={<ForwardRef(LinkOutlined) />}
      text="DOI"
    />
  </DOILink>
</UserActionWrapper>
`;

exports[`DOILinkAction renders with multiple doi ids 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef(InternalButton)>
        <IconText
          icon={<ForwardRef(LinkOutlined) />}
          text="DOI"
        />
      </ForwardRef(InternalButton)>
    }
  >
    <MenuItem
      key="10.1007/s11182-019-01606-1"
    >
      <DOILink
        doi="10.1007/s11182-019-01606-1"
      >
        10.1007/s11182-019-01606-1
        <DOIMaterial
          material={null}
        />
      </DOILink>
    </MenuItem>
    <MenuItem
      key="10.1007/s11182-019-01606-2"
    >
      <DOILink
        doi="10.1007/s11182-019-01606-2"
      >
        10.1007/s11182-019-01606-2
        <DOIMaterial
          material={null}
        />
      </DOILink>
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`DOILinkAction renders with multiple doi ids and material 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef(InternalButton)>
        <IconText
          icon={<ForwardRef(LinkOutlined) />}
          text="DOI"
        />
      </ForwardRef(InternalButton)>
    }
  >
    <MenuItem
      key="10.1007/s11182-019-01606-1"
    >
      <DOILink
        doi="10.1007/s11182-019-01606-1"
      >
        10.1007/s11182-019-01606-1
        <DOIMaterial
          material={null}
        />
      </DOILink>
    </MenuItem>
    <MenuItem
      key="10.1007/s11182-019-01606-2"
    >
      <DOILink
        doi="10.1007/s11182-019-01606-2"
      >
        10.1007/s11182-019-01606-2
        <DOIMaterial
          material="publication"
        />
      </DOILink>
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;
